fix: RWD input overlap and circle size on step progress

--- a/src/components/Main/Progress/AddressForm.module.css
+++ b/src/components/Main/Progress/AddressForm.module.css
@@ -45,3 +45,20 @@
 .address {
     grid-area: address;
 }
+
+
+@media screen and (max-width: 749.5px) {
+    .formContorl {
+        padding: 0 1rem;
+        margin-bottom: 3rem;
+        grid-template-columns: repeat(2, 1fr);
+        grid-gap: 1rem 2rem;
+        grid-template-areas: 
+            'title name'
+            'phone phone'
+            'email email'
+            'city city'
+            'address address';
+    }
+    
+}
