--- a/src/components/Main/Progress/ProgressControl.module.css
+++ b/src/components/Main/Progress/ProgressControl.module.css
@@ -1,4 +1,5 @@
 .buttonGroup {
+    margin-top: 2rem;
     width: 50%;
     display: flex;
     justify-content: flex-end;
